static/css/main.css
/* ... */
ul {
	margin-bottom: 1rem;
}
li {
	margin-left: 2.6rem;
}
small {
	font-size: 0.8rem;
	color: #666;
}

nav {
	margin: 2rem;
	position: fixed;
	right: 0;
	top: 0;
}
nav a {
	color: var(--turquoise);
	font-family: 'AuthenticSans';
	text-decoration: none;
	padding-right: 1.5rem;
	padding-bottom: 2.5rem;
}

nav a:last-child {
	padding-right: 0;
}

header {
	min-width: 200px;
	position: fixed;
	top: 0;
	left: 0;
	padding: 0.9rem 1rem;
}
@media (max-width: 780px) {
	header {
min-width: none;
width: 100%;
background-image: linear-gradient(to bottom, var(--bg-color), var(--bg-color),var(--bg-color),var(--bg-color), transparent);
}
}
.sidebar-logo {
	position: fixed;
	bottom: 0;
	left: 0;
	padding: 0.9rem 1rem;
	width: 150px;
}
.sidebar h1 {
	color: var(--turquoise);
	margin-bottom: 0;
	font-size: 3rem;
}
.sidebar a {
	color: var(--turquoise);
	text-decoration: none;
}
.sidebar h2 {
	font-family: 'AuthenticSans';
	text-transform: uppercase;
	margin-top: 0.2rem;
}

.big-title {
	color: var(--turquoise);
	text-transform: uppercase;
	font-family: 'AuthenticSans';
	border-bottom: 2px solid var(--turquoise);
	margin-bottom: 1rem;
	font-weight: normal;
}

.page-title {
	font-size: 3rem;
	margin-bottom: 1rem;
	font-weight: 300;
	color: var(--text-color);
}

.project h1 {
	font-size: 2.75rem;
}

.hidden {
	display: none;
}

main {
	margin: 0 auto;
	max-width: 100ch;
	padding-top: 0vh;
}

@media (max-width: 880px) {
	main {
		margin-top: 8vh!important;
	}
}



main > h1 {
	font-family: 'Marsha', sans-serif;
	color: var(--text-accent);

	/* text-transform: uppercase; */
}

.intro-text {
	font-family: 'AuthenticSans', sans-serif;
	font-size: 1.4rem;
	line-height: 1.1;
	margin-bottom: 30px;
	color: black;
}
a .intro-text {
	text-decoration: none;
}

.hero {
	display: flex;
	align-items: flex-start;
	justify-content: center;
}

.hero .container {
	display: flex;
	place-items: center;
}

.hero-text {
	color: var(--text-accent);
	font-size: 2rem;
	line-height: 2.4rem;
	font-weight: bold;
	font-family: 'Marsha', sans-serif;
	text-transform: uppercase;
	text-align: left;
	letter-spacing: 2px;
}
.hero-text a {
	text-decoration: none;
	border-bottom: 2px solid var(--text);
	font-family: 'AuthenticSans', sans-serif;
	text-transform: lowercase;
	font-weight: normal;
	color: var(--text);
	font-size: 25px;
	vertical-align: middle;
}

@media (min-width: 768px) {
	.hero {
		padding: 2rem;
	}
}

.event img {
	margin-bottom: 0.5rem;
	width: 300px;
	height: 300px;
	object-fit: cover;
}

.event-day {
	/* border-top: 2px solid #ff902e; */
	margin-top: 3rem;
	padding-top: 1rem;
	font-family: 'Marsha', sans-serif;
	color: var(--text-accent);
	font-size: 30px;
	text-align: center;
	text-transform: uppercase;
}

.events-grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, 290px);
	grid-gap: 1rem;
	margin-top: 1rem;
}

.event-title {
	margin: 0;
	margin-bottom: -0.1rem;
	font-size: 1rem;
	color: var(--text-accent);
	text-transform: uppercase;
	font-family: 'Marsha', sans-serif;
	padding-bottom: 0.5rem;
}

.event-title a {
	text-decoration: none;
}

.event-meta .event-title {
	border-top: 2px solid var(--border-accent);
	padding-top: 1.5rem;
	font-size: 1.5rem;
}

.event-byline {
	font-size: 1rem;
	font-weight: bold;
	margin: 0;
	font-family: 'AuthenticSans', sans-serif;
	line-height: 1.5;
	color: var(--text);
}

.event-details {
	font-size: 1rem;
	font-family: 'AuthenticSans', sans-serif;
	margin: 0;
	line-height: 1.5;
	color: var(--text);
	padding-top: 0.5rem;
}

.event-layout,
.researcher-page {
	flex-direction: column;
}

@media (min-width: 768px) {
	.event-meta {
		padding-top: 1rem;
		padding-bottom: 2rem;
	}

	.event-layout,
	.researcher-page {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		gap: 2rem;
	}

	.event-image,
	.researcher-image {
		order: 2;
		max-width: 800px;
	}

	.event-text,
	.researcher-text {
		border-top: 2px solid var(--border-accent);
		order: 1;
		max-width: 60ch;
		padding-top: 5px;
	}
	.researcher-image,
	.researcher-text {
		border-top: 0;
		padding-top: 0;
	}
}

.event-images {
	padding: 1rem 2rem;
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
	gap: 2rem;
	padding-top: 5px;
}

footer {
	margin-top: 2rem;
	padding: 0 2rem;
	font-size: 0.8rem;
}

.footer-inner {
	border-top: 2px solid var(--border-accent);
	padding: 1rem 0;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	white-space: nowrap;
}

@media (min-width: 768px) {
	.footer-inner {
		flex-direction: row;
	}
}

.footer-inner .partner-logos {
	display: flex;

	gap: 0.5rem;
}

.footer-inner .partner-logos img {
	width: 50px;
	height: auto;
}

main .partner-logos {
	display: flex;
	flex-wrap: wrap; /*  allow items to wrap  */
	justify-content: center;
	gap: 1rem;
}

main .partner-logos img {
	width: 150px;
	height: auto;
}

.side-by-side {
	display: flex;
	flex-direction: column;
	gap: 20px;
	margin-bottom: 1rem;
}

@media (min-width: 550px) {
	.side-by-side {
		flex-direction: row;
		justify-content: space-between;
		align-items: center;
	}
}
.researcher-grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
	grid-gap: 1rem;
}

.people h3 {
	color: var(--text-accent);
}

.researcher-grid img {
	width: 300px;
	height: 300px;
	object-fit: cover;
}

.sites-grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
	grid-gap: 1rem;

	& a {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		text-decoration: none;
		font-family: 'Marsha', sans-serif;
		font-weight: bold;
		font-size: 1rem;
	}
}
.site-thumb img {
	margin-bottom: 0.5rem;
}
.site-thumb {
	text-transform: uppercase;
	color: var(--text-accent);
}

.homepage-short-presentation {
	font-size: 1.8rem;
	max-width: 39ch;
}
/* ... */

